--- a/Q Trip Static/index.html
+++ b/Q Trip Static/index.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="pages/adventures/index.html" target="_blank">Explore</a>
+                    <a class="nav-link" href="pages/adventures/index.html">Explore</a>
                 </div>
             </div>
         </div>
