--- a/Q Trip Static/pages/adventures/resort/adventures-grid.html
+++ b/Q Trip Static/pages/adventures/resort/adventures-grid.html
@@ -37,7 +37,7 @@
                         <a class="nav-link active" aria-current="page" href="../../../index.html"
                             target="_blank">Home</a>
                         <!-- Explore link -->
-                        <a class="nav-link" href="../../adventures/index.html" target="_blank">Explore</a>
+                        <a class="nav-link" href="../../adventures/index.html">Explore</a>
                     </div>
                 </div>
             </div>
