--- a/Q Trip Static/pages/adventures/index.html
+++ b/Q Trip Static/pages/adventures/index.html
@@ -36,7 +36,7 @@
                 <!-- Navigation links -->
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="../../index.html" target="_blank">Home</a>
+                        <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
                         <a class="nav-link" href="#">Explore</a>
                     </div>
                 </div>
