--- a/Q Trip Static/pages/adventures/resort/adventures-grid.html
+++ b/Q Trip Static/pages/adventures/resort/adventures-grid.html
@@ -34,10 +34,9 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <!-- Home link -->
-                        <a class="nav-link active" aria-current="page" href="../../../index.html"
-                            target="_blank">Home</a>
+                        <a class="nav-link active" aria-current="page" href="../../../index.html">Home</a>
                         <!-- Explore link -->
-                        <a class="nav-link" href="../../adventures/index.html">Explore</a>
+                        <a class="nav-link" href="../../adventures/adventures-grid.html">Explore</a>
                     </div>
                 </div>
             </div>
