--- a/Q Trip Static/pages/adventures/index.html
+++ b/Q Trip Static/pages/adventures/index.html
@@ -60,7 +60,7 @@
 
             <!-- Adventure 1: Resort -->
             <div class="tile-2 col-6 col-lg-3 mt-4">
-                <a href="./resort/index.html" target="_blank">
+                <a href="./resort/adventures-grid.html">
                     <div class="tile-4">
                         <img src="../../assets/adventures/resort.jpg" alt="Resort">
                         <div class="tile-3 text-center pt-3 px-2">
