--- a/Q Trip Static/index.html
+++ b/Q Trip Static/index.html
@@ -54,7 +54,7 @@
             <!-- Bengaluru tile -->
             <div class="col-12 col-sm-6 col-lg-3 mb-3 mt-3">
                 <div class="tile">
-                    <a href="pages/adventures/index.html" target="_blank">
+                    <a href="pages/adventures/index.html">
                         <img src="assets/bengaluru.jpg" alt="Bengaluru">
                         <div class="tile-text">
                             <h5>Bengaluru</h5>
