--- a/Q Trip Static/pages/adventures/resort/adventures-grid.html
+++ b/Q Trip Static/pages/adventures/resort/adventures-grid.html
@@ -36,7 +36,7 @@
                         <!-- Home link -->
                         <a class="nav-link active" aria-current="page" href="../../../index.html">Home</a>
                         <!-- Explore link -->
-                        <a class="nav-link" href="../../adventures/adventures-grid.html">Explore</a>
+                        <a class="nav-link" href="../../adventures/index.html">Explore</a>
                     </div>
                 </div>
             </div>
@@ -53,7 +53,7 @@
                     <div class="row">
                         <!-- Main image -->
                         <div class="tile-5 col-12 col-lg-8">
-                            <img src="../../../assets/adventures/resort/resort1.jpg" alt="Resort">
+                            <img src="../../../assets/adventures/resort/resort1.jpg" alt="Resort1">
                         </div>
                         <!-- Two side images (visible only on large screens) -->
                         <div class="tile-5 d-none d-lg-block col-lg-4">
@@ -117,8 +117,7 @@
                 <div class="panel">
                     <h5>Sold Out</h5>
                     <hr>
-                    <p>This adventure is currently sold out. But there's a lot more to <span><a href="../index.html"
-                                target="_blank">explore</a></span></p>
+                    <p>This adventure is currently sold out. But there's a lot more to <span><a href="../index.html">explore</a></span></p>
                 </div>
             </div>
         </div>
